Add product  and product_image tables + models. Add getting all products ant inserting  of product with photos
